kubernetes/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
  type: ClusterIP
